--- a/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
+++ b/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
@@ -163,6 +163,9 @@
   <ItemGroup>
     <None Include="Resources\close_16x161.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\refreshpivottable_16x16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
