--- a/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
+++ b/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
@@ -166,6 +166,9 @@
   <ItemGroup>
     <None Include="Resources\refreshpivottable_16x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\export_32x32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
