--- a/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
+++ b/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
@@ -66,6 +66,12 @@
     <Compile Include="BurnProgressChecker.cs" />
     <Compile Include="CheckDownComplete.cs" />
     <Compile Include="CheckDownImages.cs" />
+    <Compile Include="frmCopyToUSB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCopyToUSB.Designer.cs">
+      <DependentUpon>frmCopyToUSB.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     <Compile Include="ucPatients2.Designer.cs">
       <DependentUpon>ucPatients2.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmCopyToUSB.resx">
+      <DependentUpon>frmCopyToUSB.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -168,6 +177,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\export_32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-usb-2-321.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-usb-2-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-c-drive-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
