20190302 USB 복사 완료

--- a/RimageConfigSetting/RimageConfigSetting.csproj
+++ b/RimageConfigSetting/RimageConfigSetting.csproj
@@ -60,8 +60,9 @@
   <PropertyGroup>
     <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+    <ApplicationIcon>1382_cogs.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.BonusSkins.v17.1, Version=17.1.13.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -173,6 +174,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\109_AllAnnotations_Help_16x16_72.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="1382_cogs.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
