--- a/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
+++ b/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
@@ -191,6 +191,9 @@
     <None Include="Resources\icons8-c-drive-32.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\mr_16x16.png" />
+    <None Include="Resources\forward_16x16.png" />
+    <None Include="Resources\documentmap_16x16.png" />
     <Content Include="RimageBasic.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
