--- a/RMDS/RMDS.csproj
+++ b/RMDS/RMDS.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RMDS</RootNamespace>
-    <AssemblyName>RMDS</AssemblyName>
+    <AssemblyName>RMDS3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
