--- a/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
+++ b/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
@@ -70,6 +70,12 @@
     <Compile Include="BurnProgressChecker.cs" />
     <Compile Include="CheckDownComplete.cs" />
     <Compile Include="CheckDownImages.cs" />
+    <Compile Include="frmCopyFolder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCopyFolder.Designer.cs">
+      <DependentUpon>frmCopyFolder.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCopyToUSB.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +110,9 @@
     <Compile Include="ucPatients2.Designer.cs">
       <DependentUpon>ucPatients2.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmCopyFolder.resx">
+      <DependentUpon>frmCopyFolder.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCopyToUSB.resx">
       <DependentUpon>frmCopyToUSB.cs</DependentUpon>
     </EmbeddedResource>
