--- a/RimageConfigSetting/RimageConfigSetting.csproj
+++ b/RimageConfigSetting/RimageConfigSetting.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RimageConfigSetting</RootNamespace>
-    <AssemblyName>RimageConfigSetting</AssemblyName>
+    <AssemblyName>RimageConfigSetting3</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
