굽기진행 체크 로직 추가

--- a/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
+++ b/RimageMedicalSystemV2/RimageMedicalSystemV2.csproj
@@ -70,6 +70,7 @@
     <Compile Include="BurnProgressChecker.cs" />
     <Compile Include="CheckDownComplete.cs" />
     <Compile Include="CheckDownImages.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="frmCopyFolder.cs">
       <SubType>Form</SubType>
     </Compile>
