원광대Dll import추가, 환자정보 가져오기 추가 환경설정 수정

--- a/RimageKorea/RimageKorea.csproj
+++ b/RimageKorea/RimageKorea.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>FrmCheckPatientForMerge.cs</DependentUpon>
     </Compile>
     <Compile Include="GetMyIP.cs" />
+    <Compile Include="GetPatientNameFromDllImport.cs" />
     <Compile Include="NetInfo.cs" />
     <Compile Include="GetPatientInfoFromMDB.cs" />
     <Compile Include="GetPatientInfoFromMDB2.cs" />
