--- a/RimageEnterance/RimageEnterance.csproj
+++ b/RimageEnterance/RimageEnterance.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RimageEnterance</RootNamespace>
-    <AssemblyName>RimageEnterance5</AssemblyName>
+    <AssemblyName>RimageEnterance</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
