원광대 환자정보 가져오기 > Url Xml 형태로 변경

--- a/RimageKorea/RimageKorea.csproj
+++ b/RimageKorea/RimageKorea.csproj
@@ -124,6 +124,7 @@
     <Compile Include="GetMyIP.cs" />
     <Compile Include="GetPatientInfoFromEAI.cs" />
     <Compile Include="GetPatientInfoFromEEG4Xml.cs" />
+    <Compile Include="GetPatientNameFromCallUrl.cs" />
     <Compile Include="GetPatientNameFromDllImport.cs" />
     <Compile Include="NetInfo.cs" />
     <Compile Include="GetPatientInfoFromMDB.cs" />
