--- a/RimageKorea/RimageKorea.csproj
+++ b/RimageKorea/RimageKorea.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Net" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -102,6 +103,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="ConfigEntity.cs" />
     <Compile Include="CreateOrderXml.cs" />
+    <Compile Include="CryptographyXml.cs" />
     <Compile Include="CurrentState.cs" />
     <Compile Include="DESHasher.cs" />
     <Compile Include="Dialog.cs" />
